<resources>
    <string name="app_name">MyMapApp</string>
    <string name="app_login">登录</string>
    <string name="app_bear">记住密码</string>
    <string name="app_bearpasw">忘记密码?</string>
    <string name="app_printpasw">密码,6—16位数字或字母</string>
    <string name="app_register">免费注册</string>
    <string name="app_phonregister">手机注册</string>
    <string name="app_set_up">设置</string>
    <string name="app_personal">个人中心</string>
    <string name="app_frends">联系人</string>
    <string name="app_interst">兴趣部落</string>
    <string name="app_dyname">好友动态</string>
    <string name="app_custodian">求助附近</string>
    <string name="app_butt_custodian">按住说话</string>
    <string name="app_threelogin">第三方登录</string>
    <string name="app_get_verification_code">获取验证码</string>
    <string name="pop_bottom">弹出底部菜单</string>
    <string name="open">打开</string>
    <string name="save">保存</string>
    <string name="prentcount">好友定位</string>
    <string name="close">关闭</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="str_recorder_normal">按住说话</string>
    <string name="str_recorder_recording">松开结束</string>
    <string name="str_recorder_want_cancel">松开手指，取消发送</string>
    <string name="str_personal_editor">编辑</string>
    <string name="str_personal_nickname">昵称：</string>
    <string name="str_personal_sex">性别：</string>
    <string name="str_personal_age">年龄：</string>
    <string name="str_personal_birthday">生日：</string>
    <string name="str_personal_bloodType">血型：</string>
    <string name="str_personal_Profession">职业：</string>
    <string name="str_personal_Email">邮箱：</string>
    <string name="str_personal_editorActivity">编辑资料</string>
    <string name="str_personal_editorActivityFinish">完成</string>
    <string name="str_personal_editorActivitynickname">请输入昵称</string>
</resources>
