<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<TextView
    android:id="@+id/text_login"
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:textSize="20dp"
    android:gravity="center"
    android:background="#fff"
    android:text="@string/app_login"/>
    <LinearLayout
        android:id="@+id/topimag"
        android:layout_below="@+id/text_login"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:gravity="center">
        <com.example.administrator.mapclient.view.RoundImageView
            android:id="@+id/nickimage"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/nickimg" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lingreit"
        android:layout_below="@+id/topimag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/shapes">
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/user"/>
        <EditText
            android:id="@+id/ed_user"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:layout_marginLeft="5dp"
            android:hint="手机号"/>
    </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#707070"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/pssw"/>
            <EditText
                android:layout_marginLeft="5dp"
                android:id="@+id/ed_passw"
                android:layout_width="match_parent"
                android:background="@null"
                android:inputType="textPassword"
                android:layout_height="40dp"
                android:hint="密码"/>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_below="@+id/lingreit"
        android:layout_margin="5dp"
        android:id="@+id/relita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="@color/colorgray"
            android:text="@string/app_bear"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>
   <Button
       android:id="@+id/butlogin"
       android:layout_below="@+id/relita"
       android:layout_width="match_parent"
       android:background="@drawable/shapelogin"
       android:layout_margin="5dp"
       android:textSize="20dp"
       android:text="@string/app_login"
       android:textColor="@color/colorwehite"
       android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" 
            android:textSize="16dp"
            android:layout_marginLeft="60dp"
            android:gravity="center"
            android:textColor="@color/colorgray"
            android:text="@string/app_register"
            android:id="@+id/text_register" />
        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorgray"/>
        <TextView
            android:id="@+id/Forgotpassw"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginRight="60dp"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="@color/colorgray"
            android:text="@string/app_bearpasw"/>
    </LinearLayout>
</RelativeLayout>
